# mikrik

./: .gitignore  README.md
ros/src/mikrik_base/: CMakeLists.txt  package.xml
ros/src/mikrik_base/launch/: mikrik_base.launch
ros/src/mikrik_base/src/: mikrik_base.cpp  mikrik_hardware_interface.h
ros/src/mikrik_control/: CMakeLists.txt  package.xml
ros/src/mikrik_control/config/: mikrik_controllers.yaml
ros/src/mikrik_control/launch/: mikrik_control.launch
ros/src/mikrik_description/: CMakeLists.txt  package.xml
ros/src/mikrik_description/launch/: bringup.launch  display_model.launch
ros/src/mikrik_description/urdf/: mikrik.xacro  mikrik_left_wheel.xacro  mikrik_materials.xacro  mikrik_right_wheel.xacro
ros/src/mikrik_driver/: CMakeLists.txt  package.xml
ros/src/mikrik_driver/launch/: mikrik_drivers.launch  mikrik_pid.launch
ros/src/mikrik_driver/src/: dc_motor_wiring_pi.hpp  dc_motors.cpp  encoder_wiring_pi.hpp  encoders.cpp
ros/src/mikrik_teleop/: CMakeLists.txt  package.xml
ros/src/mikrik_teleop/launch/: mikrik_teleop.launch
ros/src/mikrik_teleop/src/: mikrik_teleop.cpp  mikrik_teleop.h
