<?xml version="1.0"?>
<!--SPDX-License-Identifier: Apache-2.0-->
    <package format="2">
    <name>mikrik_teleop</name>
    <version>0.1.0</version>
    <description>The mikrik_teleop package</description>

    <maintainer email="mxlfrbt@icloud.com">mxlfrbt</maintainer>
    <license>Apache-2.0</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>joy</build_depend>

	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>sensor_msgs</build_export_depend>
	<build_export_depend>joy</build_export_depend>

	<exec_depend>roscpp</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>joy</exec_depend>

	<export>
	</export>
</package>
